# ML-modelos

./: 2. Preprocesamiento.ipynb  4. Experimentos con modelos de clasificación copy.ipynb  Modelo_Gradient_Boosting.joblib  Modelo_naive_bayes.joblib  Modelo_regresion_logistica.joblib  README.md  __init__.py  pyproject.toml
