[tool.poetry]
name = "models-project-package"
version = "0.1.0"
description = "This project implements gradient boosting, logistic regression, support vector machines, and naive Bayes with Census Income data set"
authors = ["Chafic Aljure"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
ucimlrepo = "^0.0.7"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
